--- a/src/main/webapp/admin/users/user_privileges.xhtml
+++ b/src/main/webapp/admin/users/user_privileges.xhtml
@@ -17,51 +17,85 @@
                     <h:panelGroup  rendered="#{!webUserController.hasPrivilege('AdminManagingUsers')}"  >
                         <p:outputLabel value="YOU ARE NOT AUTHERIZED." ></p:outputLabel>
                     </h:panelGroup>
-                    <p:panelGrid columns="2"  rendered="#{webUserController.hasPrivilege('AdminManagingUsers')}" >                   
-
-                        <p:panel header="Manage User Privilages"   >
 
 
-                            <f:facet name="header" >
-                                <h:outputLabel value="Manage User Privilages"/>
-                                <p:commandButton value="Update User Privilage"  
-                                                 action="#{userPrivilageController.savePrivileges()}" ajax="false"  >  
-                                </p:commandButton>
+                    <p:panel header="Manage User Privilages"  rendered="#{webUserController.hasPrivilege('AdminManagingUsers')}" >
 
 
-                                <p:commandButton ajax="false" value="Back" 
-                                                 action="#{webUserController.navigateToListUsers()}" >
-                                </p:commandButton>
-
-                            </f:facet>
-
-                            <h:panelGrid  columns="2" >                          
-
-                                <p:autoComplete id="user"  
-                                                forceSelection="true"  
-                                                completeMethod="#{webUserController.completeUser}" 
-                                                var="us" 
-                                                itemLabel="#{us.webUserPerson.name}" 
-                                                itemValue="#{us}"  
-                                                value="#{userPrivilageController.currentWebUser}" >
-                                    <f:ajax event="itemSelect" execute="user" render="tree" />
-                                </p:autoComplete>
-                            </h:panelGrid>
+                        <f:facet name="header" >
+                            <h:outputLabel value="Manage User Privilages"/>
+                            <p:commandButton value="Update User Privilage"  
+                                             action="#{userPrivilageController.savePrivileges()}"
+                                             ajax="false"  >  
+                            </p:commandButton>
 
 
-                            <p:panel id="tree">
-                                <p:tree 
-                                    value="#{userPrivilageController.rootTreeNode}" 
-                                    var="node"  
-                                    selectionMode="checkbox" 
-                                    selection="#{userPrivilageController.selectedNodes}">  
-                                    <p:treeNode>  
-                                        <h:outputText value="#{node}" />  
-                                    </p:treeNode>  
-                                </p:tree>  
-                            </p:panel>
+                            <p:commandButton ajax="false" value="Back" 
+                                             action="#{webUserController.navigateToListUsers()}" >
+                            </p:commandButton>
+
+                        </f:facet>
+
+                        <h:panelGrid  columns="2" >    
+                            <p:outputLabel value="Username" ></p:outputLabel>
+                            <p:outputLabel value="#{userPrivilageController.currentWebUser.name}" ></p:outputLabel>
+
+                            <p:outputLabel value="Institution" ></p:outputLabel>
+                            <p:autoComplete 
+                                id="acIns"
+                                value="#{userPrivilageController.institution}"
+                                completeMethod="#{institutionController.completeCompany}"
+                                var="ins"
+                                itemLabel="#{ins.name}"
+                                itemValue="#{ins}"
+                                forceSelection="true"
+                                required="true"
+                                requiredMessage="Please select an institution">
+                                <p:ajax process="acIns" update="cmbDept" ></p:ajax>
+                            </p:autoComplete>
+
+
+                            <p:outputLabel value="Department" ></p:outputLabel>
+                            <p:selectOneMenu 
+                                id="cmbDept"
+                                value="#{userPrivilageController.department}"
+                                required="true"
+                                requiredMessage="Please select a Department">
+                                <f:selectItem itemLabel="Select" ></f:selectItem>
+                                <f:selectItems value="#{departmentController.getInsDepartments(userPrivilageController.institution)}" ></f:selectItems>
+                            </p:selectOneMenu>
+
+                            <p:commandButton value="List Privileges"
+                                             process="acIns cmbDept btnList"
+                                             update="tree"
+                                             action="#{userPrivilageController}"></p:commandButton>
+                            
+                        </h:panelGrid>
+
+
+                        <p:panel id="tree">
+                            <p:tree
+                                id="tree"
+                                selectionMode="checkbox"
+                                datakey="#{node}"
+                                selection="#{userPrivilageController.selectedNodes}"
+                                value="#{userPrivilageController.rootTreeNode}" 
+                                var="node"  >  
+                                <p:ajax event="select"
+                                        listener="#{userPrivilageController.onNodeSelect}" 
+                                        />
+                                <p:ajax event="unselect" 
+                                        listener="#{userPrivilageController.onNodeUnselect}" 
+                                        />
+                                <p:treeNode>  
+                                    <h:outputText value="#{node}" />  
+                                </p:treeNode>  
+                            </p:tree>
                         </p:panel>
-                    </p:panelGrid>
+                    </p:panel>
+
+
+
 
                 </h:form>
 
