--- a/src/main/webapp/emr/reports/vmps.xhtml
+++ b/src/main/webapp/emr/reports/vmps.xhtml
@@ -51,7 +51,7 @@
                                 <p:column headerText="Dosage Form" filterBy="#{vmp.dosageForm.name}" filterMatchMode="contains">
                                     <h:outputText value=" #{vmp.category.name}"></h:outputText>
                                 </p:column>
-<!--                                <p:column headerText="Strength Units per Issue Unit" filterBy="#{vmp.strengthOfAnIssueUnit}" filterMatchMode="contains">
+                                <p:column headerText="Strength Units per Issue Unit" filterBy="#{vmp.strengthOfAnIssueUnit}" filterMatchMode="contains">
                                     <h:outputText value="#{vmp.strengthOfAnIssueUnit}"></h:outputText>
                                 </p:column>
                                 <p:column headerText="Strength Unit" filterBy="#{vmp.strengthUnit.name}" filterMatchMode="contains">
@@ -76,7 +76,7 @@
                                 </p:column>
                                 <p:column headerText="Issue Multiplies Unit" filterBy="#{vmp.issueMultipliesUnit.name}" filterMatchMode="contains">
                                     <h:outputText value="#{vmp.issueMultipliesUnit.name}"></h:outputText>
-                                </p:column>-->
+                                </p:column>
 
                             </p:dataTable>
 
